<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/img_poster_detail"
            android:layout_width="150dp"
            android:layout_height="210dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/contentDes_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_judul_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/dark_green"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_poster_detail"
            app:layout_constraintTop_toTopOf="@+id/img_poster_detail" />

        <TextView
            android:id="@+id/tv_date_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/dark_green"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_poster_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_judul_detail"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_tahun_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/light_green"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_judul_detail" />

        <TextView
            android:id="@+id/tv_overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/overview_title"
            android:textColor="@color/dark_green"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/img_duration"
            app:layout_constraintTop_toBottomOf="@+id/img_duration" />

        <TextView
            android:id="@+id/tv_overview_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="gravity"
            android:textColor="@color/light_green"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_overview_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_title" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/dark_green"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/img_poster_detail" />

        <ImageView
            android:id="@+id/img_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentDes_duration"
            android:src="@drawable/ic_baseline_access_time_24"
            app:layout_constraintStart_toStartOf="@+id/tv_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/dark_green"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_duration"
            app:layout_constraintStart_toEndOf="@+id/img_duration"
            app:layout_constraintTop_toTopOf="@+id/img_duration"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/contentDes_share"
            android:drawableStart="@drawable/ic_baseline_share_24"
            android:text="@string/share_button"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_content" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>